--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -1176,7 +1176,8 @@ See RS/6000 and PowerPC Options.
 -mbig-endian  -mlittle-endian @gol
 -mstack-protector-guard=@var{guard}  -mstack-protector-guard-reg=@var{reg} @gol
 -mstack-protector-guard-offset=@var{offset} @gol
--mcsr-check -mno-csr-check}
+-mcsr-check -mno-csr-check @gol
+-minline-atomics  -mno-inline-atomics}
 
 @emph{RL78 Options}
 @gccoptlist{-msim  -mmul=none  -mmul=g13  -mmul=g14  -mallregs @gol
@@ -26749,9 +26750,16 @@ Do or don't use smaller but slower prologue and epilogue code that uses
 library function calls.  The default is to use fast inline prologues and
 epilogues.
 
+@opindex minline-atomics
+@item -minline-atomics
+@itemx -mno-inline-atomics
+Do or don't use smaller but slower subword atomic emulation code that uses
+libatomic function calls.  The default is to use fast inline subword atomics
+that do not require libatomic.
+
+@opindex mshorten-memrefs
 @item -mshorten-memrefs
 @itemx -mno-shorten-memrefs
-@opindex mshorten-memrefs
 Do or do not attempt to make more use of compressed load/store instructions by
 replacing a load/store of 'base register + large offset' with a new load/store
 of 'new base + small offset'.  If the new base gets stored in a compressed
